2006-05-06  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_SourceEmbedList.py: fix icon
	* src/DisplayState.py: add relationship calculator option to statusbar

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_WebEmbedList.py: new icon

2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/glade/gramps.glade: typo.
	* src/Editors/_EditSourceRef.py (_create_tabbed_pages): Add data
	and repository tabs.
	* src/GrampsDb/_GrampsDbBase.py (undo, redo): Add repository map
	to the tuple of tables.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py: handle edit of events
	* src/DisplayTabs/_NoteTab.py: stock_notes icon
	* src/DisplayTabs/_GrampsTab.py: handle named icons
	* src/glade/gramps.glade: hide date edit by default
	* src/DateEdit.py: ManagedWindow
	* src/Editors/_EditAddress.py: new DateEdit interface
	* src/Editors/_EditLdsOrd.py: new DateEdit interface
	* src/Editors/_EditSourceRef.py: new DateEdit interface
	* src/Editors/_EditEventRef.py: new DateEdit interface
	* src/Editors/_EditMedia.py: new DateEdit interface
	* src/Editors/_EditName.py: new DateEdit interface
	* src/Editors/_EditEvent.py: new DateEdit interface
	* src/GrampsWidgets.py: new DateEdit interface
	* src/Editors/_EditFamily.py: import ChildModel

2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/UndoHistory.py: Add new file.
	* src/ViewManager.py: undo history support.
	* src/GrampsDb/_GrampsDbBase.py (Transaction.__init__): Add
	timestamp to the transaction.
	(GrampsDbBase.redo): Update undo history window.
	(GrampsDbBase.undo): Update undo history window.
	(GrampsDbBase.transaction_commit): Update undo history window.
	(GrampsDbBase.transaction_commit): Set transaction timestamp.
	(GrampsDbBase.__init__): Define undo_history_callback.
	* src/Makefile.am (gdir_PYTHON): Ship new file.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: nickname changes