@@ -1,4 +1,5 @@
 2006-05-06  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_PersonView.py: handle filter option correctly
 	* src/DisplayTabs/_SourceEmbedList.py: fix icon
 	* src/DisplayState.py: add relationship calculator option to statusbar
 
